Update prx.org Proxy DNS records

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -366,6 +366,24 @@ Resources:
       Comment: Public-facing domains for apps managed on .tech
       HostedZoneId: !Ref HostedZone
       RecordSets:
+        - Type: A
+          Name: !Ref Domain
+          AliasTarget:
+            DNSName: d1txozk2299k6z.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Ref Domain
+          AliasTarget:
+            DNSName: d1txozk2299k6z.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+
+        - ResourceRecords:
+            # - proxy.prx.tech.
+            - d1txozk2299k6z.cloudfront.net.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub www.${Domain}
+
         - ResourceRecords:
             - backsaw.prx.tech.
           TTL: "300"
@@ -432,26 +450,6 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub networks.${Domain}
-        - Type: A
-          Name: !Ref Domain
-          AliasTarget:
-            DNSName: d2349stnozhk8u.cloudfront.net
-            HostedZoneId: Z2FDTNDATAQYW2
-        - Type: AAAA
-          Name: !Ref Domain
-          AliasTarget:
-            DNSName: d2349stnozhk8u.cloudfront.net
-            HostedZoneId: Z2FDTNDATAQYW2
-        - Type: A
-          Name: !Sub www.${Domain}
-          AliasTarget:
-            DNSName: d1o7ngosfkig2o.cloudfront.net
-            HostedZoneId: Z2FDTNDATAQYW2
-        - Type: AAAA
-          Name: !Sub www.${Domain}
-          AliasTarget:
-            DNSName: d1o7ngosfkig2o.cloudfront.net
-            HostedZoneId: Z2FDTNDATAQYW2
   DotOrg:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
