--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1085,17 +1085,6 @@ Resources:
           TTL: "3600"
           Type: CNAME
           Name: !Sub streams2.${Domain}
-  Orson:
-    Type: "AWS::Route53::RecordSetGroup"
-    Properties:
-      Comment: Orson
-      HostedZoneId: !Ref HostedZone
-      RecordSets:
-        - ResourceRecords:
-            - !Sub orson.${Domain}
-          TTL: "3600"
-          Type: CNAME
-          Name: !Sub planet.${Domain}
   Legacy:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
@@ -1199,28 +1188,17 @@ Resources:
             DNSName: d43em5aywokfv.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
-  Unbounce:
-    Type: "AWS::Route53::RecordSetGroup"
-    Properties:
-      Comment: Unbounce
-      HostedZoneId: !Ref HostedZone
-      RecordSets:
-        - ResourceRecords:
-            - unbouncepages.com.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub try.${Domain}
   Feedburner:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Feedburner
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
+        - Name: !Sub feeds.${Domain}
+          ResourceRecords:
             - io25k.feedproxy.ghs.google.com.
           TTL: "300"
           Type: CNAME
-          Name: !Sub feeds.${Domain}
   GitHub:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
@@ -1465,32 +1443,32 @@ Resources:
           Type: MX
           Name: !Ref Domain
   MailChimp:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: MailChimp
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
+        - Name: !Sub k1._domainkey.${Domain}
+          ResourceRecords:
             - dkim.mcsv.net.
           TTL: "300"
           Type: CNAME
-          Name: !Sub k1._domainkey.${Domain}
   Kannu:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: Kannu
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
+        - Name: !Sub soundschool.${Domain}
+          ResourceRecords:
             - prx.kannu.com.
           TTL: "300"
           Type: CNAME
-          Name: !Sub soundschool.${Domain}
-        - ResourceRecords:
+        - Name: !Sub _812f2ace0001ab6d5f847b1b513e7231.soundschool.${Domain}
+          ResourceRecords:
             - _6e1b8a4a6d26f0cc77491cfe3e2c416a.auiqqraehs.acm-validations.aws.
           TTL: "300"
           Type: CNAME
-          Name: !Sub _812f2ace0001ab6d5f847b1b513e7231.soundschool.${Domain}
   AwsAcmLegacyUsEast1:
     Type: AWS::Route53::RecordSetGroup
     Properties:
@@ -1599,13 +1577,13 @@ Resources:
           TTL: "3600"
           Type: CNAME
   Classy:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: Classy
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
+        - Name: !Sub give.${Domain}
+          ResourceRecords:
             - vanity.classy.org.
           TTL: "300"
           Type: CNAME
-          Name: !Sub give.${Domain}
