Add Elasticsearch domain for CMS

--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -29,6 +29,8 @@ Parameters:
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   SharedMemcachedEndpointAddress: { Type: String }
+  VpcPublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcPublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -270,6 +272,43 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: CMS }
       TaskRoleArn: !GetAtt TaskRole.Arn
+
+  ElasticsearchDomain:
+    Type: AWS::Elasticsearch::Domain
+    Properties:
+      # AccessPolicies: Json
+      AdvancedSecurityOptions:
+        Enabled: false
+      DomainEndpointOptions:
+        EnforceHTTPS: true
+        TLSSecurityPolicy: Policy-Min-TLS-1-2-2019-07
+      EBSOptions:
+        EBSEnabled: true
+        VolumeSize: 10 # GiB
+        VolumeType: gp3
+      ElasticsearchClusterConfig:
+        InstanceCount: !If [IsProduction, 2, 1]
+        InstanceType: t3.small.elasticsearch
+        ZoneAwarenessEnabled: !If [IsProduction, true, false]
+      ElasticsearchVersion: "7.9"
+      EncryptionAtRestOptions:
+        Enabled: false
+      NodeToNodeEncryptionOptions:
+        Enabled: false
+      SnapshotOptions:
+        AutomatedSnapshotStartHour: 8 # UTC
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: CMS }
+      VPCOptions:
+        # SecurityGroupIds:
+        #   - String
+        SubnetIds:
+          - VpcPublicSubnet1Id
+          - VpcPublicSubnet2Id
 
   # TODO
   # # callback queues are being slow
