--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -174,6 +174,9 @@ Resources:
         RootStackName: !Ref RootStackName
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
+        VpcPublicSubnet1Id: !Ref VpcPublicSubnet1Id
+        VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
+
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
