--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -307,8 +307,8 @@ Resources:
         # SecurityGroupIds:
         #   - String
         SubnetIds:
-          - VpcPublicSubnet1Id
-          - VpcPublicSubnet2Id
+          - !Ref VpcPublicSubnet1Id
+          - !Ref VpcPublicSubnet2Id
 
   # TODO
   # # callback queues are being slow
