--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -308,7 +308,7 @@ Resources:
         #   - String
         SubnetIds:
           - !Ref VpcPublicSubnet1Id
-          - !Ref VpcPublicSubnet2Id
+          - !If [IsProduction, !Ref VpcPublicSubnet2Id, !Ref "AWS::NoValue"]
 
   # TODO
   # # callback queues are being slow
