--- a/stacks/provisioned/play.yml
+++ b/stacks/provisioned/play.yml
@@ -36,7 +36,7 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
       Actions:
-        - TargetGroupArn: !Ref TargetGroup
+        - TargetGroupArn: !Ref WebTargetGroup
           Type: forward
       Conditions:
         - Field: host-header
@@ -44,8 +44,23 @@ Resources:
             - play.*
       ListenerArn: !Ref AlbHttpsListenerArn
       Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
+  ProxyPathListenerRule:
+    Type: AWS::ElasticLoadBalancingV2::ListenerRule
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref ProxyTargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - play.*
+        - Field: path-pattern
+          Values:
+            - /proxy2*
+      ListenerArn: !Ref AlbHttpsListenerArn
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "10"]]
 
-  TargetGroup:
+  WebTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
       HealthCheckIntervalSeconds: 15
@@ -67,7 +82,7 @@ Resources:
       TargetType: instance
       UnhealthyThresholdCount: 3
       VpcId: !Ref VpcId
-  TargetGroupHttp5xxAlarm:
+  WebTargetGroupHttp5xxAlarm:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
@@ -86,7 +101,7 @@ Resources:
         - Name: LoadBalancer
           Value: !Ref AlbFullName
         - Name: TargetGroup
-          Value: !GetAtt TargetGroup.TargetGroupFullName
+          Value: !GetAtt WebTargetGroup.TargetGroupFullName
       EvaluationPeriods: 1
       MetricName: HTTPCode_Target_5XX_Count
       Namespace: AWS/ApplicationELB
@@ -108,7 +123,7 @@ Resources:
       LoadBalancers:
         - ContainerName: !Ref kContainerName
           ContainerPort: !Ref kApplicationPort
-          TargetGroupArn: !Ref TargetGroup
+          TargetGroupArn: !Ref WebTargetGroup
       PropagateTags: TASK_DEFINITION
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -201,3 +216,130 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Play }
       TaskRoleArn: !GetAtt TaskRole.Arn
+
+  ProxyTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      HealthCheckEnabled: false
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Play }
+      Targets:
+        - Id: !GetAtt ProxyFunction.Arn
+      TargetType: lambda
+
+  ProxyFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Description: !Sub ${EnvironmentType} Play feed proxy
+      Environment:
+        Variables:
+          MAX_HTTP_REDIRECTS: 4
+      Handler: index.handler
+      InlineCode: |
+        const http = require("http");
+        const https = require("https");
+
+        const PROXY_UA = "play.prx.org feed proxy";
+        const ACCEPTED_TYPES = [
+          "application/rss+xml",
+          "application/rdf+xml;q=0.8",
+          "application/atom+xml;q=0.6",
+          "application/xml;q=0.4",
+          "text/xml;q=0.4",
+        ];
+
+        async function request(url, redirectCount, redirectUrl) {
+          return new Promise((resolve, reject) => {
+            const q = new URL(redirectUrl || url);
+
+            // Setup request options
+            const options = {
+              host: q.host,
+              port: q.port,
+              path: `${q.pathname || ""}${q.search || ""}`,
+              method: "GET",
+              headers: {
+                Accept: ACCEPTED_TYPES.join(","),
+                "User-Agent": PROXY_UA,
+              },
+            };
+
+            const h = q.protocol === "https:" ? https : http;
+            const req = h.request(options, (res) => {
+              res.setEncoding("utf8");
+
+              let resData = "";
+              res.on("data", (chunk) => {
+                resData += chunk;
+                return resData;
+              });
+
+              res.on("end", async () => {
+                if (
+                  (res.statusCode >= 200 && res.statusCode < 300) ||
+                  res.statusCode === 404 ||
+                  res.statusCode === 410
+                ) {
+                  resolve(resData);
+                } else if (res.statusCode === 301 || res.statusCode === 302) {
+                  try {
+                    if (redirectCount > +process.env.MAX_HTTP_REDIRECTS) {
+                      reject(new Error("Too many redirects"));
+                      return;
+                    }
+
+                    const count = redirectCount ? redirectCount + 1 : 1;
+                    await httpRequest(url, count, res.headers.location);
+                    resolve();
+                  } catch (error) {
+                    reject(error);
+                  }
+                } else {
+                  const error = new Error(`Error ${res.statusCode}: ${resData}`);
+                  reject(error);
+                }
+              });
+            });
+
+            req.on("error", (error) => reject(error));
+
+            req.write("");
+            req.end();
+          });
+        }
+
+        exports.handler = async (event) => {
+          const feedUrl = event.queryStringParameters.url;
+
+          res = await request(feedUrl);
+
+          return {
+            statusCode: 200,
+            statusDescription: "200 OK",
+            isBase64Encoded: false,
+            headers: {
+              "Content-Type": "application/rss+xml",
+              "Cache-Control": "public, max-age=90",
+            },
+            body: res,
+          };
+        };
+      MemorySize: 256
+      Runtime: nodejs12.x
+      Tags:
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: Play
+      Timeout: 6
+  ProxyFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${ProxyFunction}
+      RetentionInDays: 14
