--- a/stacks/provisioned/play.yml
+++ b/stacks/provisioned/play.yml
@@ -1,5 +1,6 @@
 # stacks/provisioned/play.yml
 AWSTemplateFormatVersion: "2010-09-09"
+Transform: AWS::Serverless-2016-10-31
 
 Description: >-
   Creates an ECS service for Play, along with target group and listener rule
