Add Lambda permission

--- a/stacks/provisioned/play.yml
+++ b/stacks/provisioned/play.yml
@@ -344,3 +344,10 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${ProxyFunction}
       RetentionInDays: 14
+  ProxyFunctionAlbPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref ProxyFunction
+      Principal: elasticloadbalancing.amazonaws.com
+      SourceArn: !Ref ProxyTargetGroup
