--- a/stacks/provisioned/play.yml
+++ b/stacks/provisioned/play.yml
@@ -220,6 +220,8 @@ Resources:
 
   ProxyTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    DependsOn:
+      - ProxyFunctionAlbPermission
     Properties:
       HealthCheckEnabled: false
       Tags:
@@ -350,4 +352,3 @@ Resources:
       Action: lambda:InvokeFunction
       FunctionName: !Ref ProxyFunction
       Principal: elasticloadbalancing.amazonaws.com
-      SourceArn: !Ref ProxyTargetGroup
