--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -273,42 +273,42 @@ Resources:
         - { Key: prx:dev:application, Value: CMS }
       TaskRoleArn: !GetAtt TaskRole.Arn
 
-  # ElasticsearchDomain:
-  #   Type: AWS::Elasticsearch::Domain
-  #   Properties:
-  #     # AccessPolicies: Json
-  #     AdvancedSecurityOptions:
-  #       Enabled: false
-  #     DomainEndpointOptions:
-  #       EnforceHTTPS: true
-  #       TLSSecurityPolicy: Policy-Min-TLS-1-2-2019-07
-  #     EBSOptions:
-  #       EBSEnabled: true
-  #       VolumeSize: 10 # GiB
-  #       VolumeType: gp2
-  #     ElasticsearchClusterConfig:
-  #       InstanceCount: !If [IsProduction, 2, 1]
-  #       InstanceType: t3.small.elasticsearch
-  #       ZoneAwarenessEnabled: !If [IsProduction, true, false]
-  #     ElasticsearchVersion: "7.9"
-  #     EncryptionAtRestOptions:
-  #       Enabled: false
-  #     NodeToNodeEncryptionOptions:
-  #       Enabled: false
-  #     SnapshotOptions:
-  #       AutomatedSnapshotStartHour: 8 # UTC
-  #     Tags:
-  #       - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-  #       - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-  #       - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-  #       - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-  #       - { Key: prx:dev:application, Value: CMS }
-  #     VPCOptions:
-  #       # SecurityGroupIds:
-  #       #   - String
-  #       SubnetIds:
-  #         - !Ref VpcPublicSubnet1Id
-  #         - !If [IsProduction, !Ref VpcPublicSubnet2Id, !Ref "AWS::NoValue"]
+  ElasticsearchDomain:
+    Type: AWS::Elasticsearch::Domain
+    Properties:
+      # AccessPolicies: Json
+      AdvancedSecurityOptions:
+        Enabled: false
+      DomainEndpointOptions:
+        EnforceHTTPS: true
+        TLSSecurityPolicy: Policy-Min-TLS-1-2-2019-07
+      EBSOptions:
+        EBSEnabled: true
+        VolumeSize: 10 # GiB
+        VolumeType: gp2
+      ElasticsearchClusterConfig:
+        InstanceCount: !If [IsProduction, 2, 1]
+        InstanceType: t3.small.elasticsearch
+        ZoneAwarenessEnabled: !If [IsProduction, true, false]
+      ElasticsearchVersion: "7.9"
+      EncryptionAtRestOptions:
+        Enabled: false
+      NodeToNodeEncryptionOptions:
+        Enabled: false
+      SnapshotOptions:
+        AutomatedSnapshotStartHour: 8 # UTC
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: CMS }
+      VPCOptions:
+        # SecurityGroupIds:
+        #   - String
+        SubnetIds:
+          - !Ref VpcPublicSubnet1Id
+          - !If [IsProduction, !Ref VpcPublicSubnet2Id, !Ref "AWS::NoValue"]
 
   # TODO
   # # callback queues are being slow
