Add Elasticsearch security group

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -176,6 +176,7 @@ Resources:
         SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
         VpcPublicSubnet1Id: !Ref VpcPublicSubnet1Id
         VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
+        EcsAsgOutboundTrafficSecurityGroupId: !Ref EcsAsgOutboundTrafficSecurityGroupId
 
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
