Add env var for CMS Elasticsearch domain

--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -202,6 +202,8 @@ Resources:
               Value: !Ref AWS::Region
             - Name: MEMCACHE_SERVERS
               Value: !Ref SharedMemcachedEndpointAddress
+            - Name: ELASTICSEARCH_URL
+              Value: !Sub https://${ElasticsearchDomain.DomainEndpoint}:9200
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/cms.prx.org:${EcrImageTag}
           LogConfiguration:
