--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -113,6 +113,33 @@ Resources:
       RuleAction: allow
       RuleNumber: 621
 
+  # INGRESS 720
+  # Allows inbound Elasticsearch traffic from all IPs within the VPC
+  InboundIpV4ElasticsearchNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: false
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 9200
+        To: 9200
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 720
+  InboundIpV6ElasticsearchNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 9200
+        To: 9200
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 721
+
   # EGRESS 120
   # Allows outbound traffic on high-numbered ports to all IPs. This generally
   # is for return traffic to clients on ephemeral ports. Some of the
