Use private subnets

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -174,8 +174,8 @@ Resources:
         RootStackName: !Ref RootStackName
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
-        VpcPublicSubnet1Id: !Ref VpcPublicSubnet1Id
-        VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
+        VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
+        VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
         EcsAsgOutboundTrafficSecurityGroupId: !Ref EcsAsgOutboundTrafficSecurityGroupId
 
       Tags:
