--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -29,8 +29,8 @@ Parameters:
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   SharedMemcachedEndpointAddress: { Type: String }
-  VpcPublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
   EcsAsgOutboundTrafficSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
 
 Conditions:
@@ -326,8 +326,8 @@ Resources:
         SecurityGroupIds:
           - !GetAtt ElasticsearchSecurityGroup.GroupId
         SubnetIds:
-          - !Ref VpcPublicSubnet1Id
-          - !If [IsProduction, !Ref VpcPublicSubnet2Id, !Ref "AWS::NoValue"]
+          - !Ref VpcPrivateSubnet1Id
+          - !If [IsProduction, !Ref VpcPrivateSubnet2Id, !Ref "AWS::NoValue"]
 
   # TODO
   # # callback queues are being slow
