--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -141,7 +141,7 @@ Resources:
       RuleNumber: 721
 
   # EGRESS 120
-  # Allows outbound traffic on high-numbered ports to all IPs. This generally
+  # Allows outbound traffic on high-numbered ports to the VPC. This generally
   # is for return traffic to clients on ephemeral ports. Some of the
   # ports in this range may be denied by other rules.
   # https://docs.aws.amazon.com/vpc/latest/userguide/vpc-network-acls.html#nacl-ephemeral-ports
