Cleanup resource name

--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -292,7 +292,7 @@ Resources:
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: CMS }
-  ElasticsearchDomain2:
+  ElasticsearchDomain:
     Type: AWS::Elasticsearch::Domain
     Properties:
       # AccessPolicies: Json
