--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -203,7 +203,7 @@ Resources:
             - Name: MEMCACHE_SERVERS
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: ELASTICSEARCH_URL
-              Value: !Sub https://${ElasticsearchDomain2.DomainEndpoint}:9200
+              Value: !Sub https://${ElasticsearchDomain.DomainEndpoint}:9200
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/cms.prx.org:${EcrImageTag}
           LogConfiguration:
