--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -388,6 +388,14 @@ Resources:
         traffic out
       SecurityGroupEgress:
         - CidrIp: 0.0.0.0/0
+          FromPort: 443
+          IpProtocol: tcp
+          ToPort: 443
+        - CidrIpv6: ::/0
+          FromPort: 443
+          IpProtocol: tcp
+          ToPort: 443
+        - CidrIp: 0.0.0.0/0
           FromPort: 3306
           IpProtocol: tcp
           ToPort: 3306
